# interview-toolkit

./: .gitignore  LICENSE  MANIFEST.in  MANIFEST.in.license  README.md  cover.cls  cv.py  poetry.lock.license  pyproject.toml  resume.cls  resume_script.py  setup.py  template.cls
.reuse/: dep5
examples/: cover_demo.tex  cover_demo.yml  resume_demo.tex  resume_demo.yml  theo.png.license
interview-toolkit/: cover_script.py
interview-toolkit/templates/: cover.cls
interview_toolkit/: __init__.py  cover.py  lib.py  main.py  resume.py
interview_toolkit/templates/: cover.cls  resume.cls
scripts/: interview-toolkit
